UIUX-888: fix problem that shows extra border on firefox only

--- a/sugarcrm/styleguide/less/sugar-specific/responsive-sugar.less
+++ b/sugarcrm/styleguide/less/sugar-specific/responsive-sugar.less
@@ -198,7 +198,7 @@
 
   .thumbnail {
     .border-radius(0);
-    overflow: scroll;
+    overflow: auto;
   }
   .thumbnail h1 {
   }
